--- a/index.html
+++ b/index.html
@@ -17,18 +17,22 @@
         <!-- Galeria de imagens -->
         <section class="image-gallery">
             <div class="image-item" id="image1">
-                <img src="imagens/imagem.jpg" alt="Imagem 1">
+                <img src="https://98Caracteres.github.io/O-melhor-do-nosso-mundo/imagem.jpg" alt="Imagem imagem">
+
                 <p class="legend">Magnífico</p>
             </div>
             <div class="image-item" id="image2">
-                <img src="imagens/imagem2.jpg" alt="Imagem 2">
+                <img src="https://98Caracteres.github.io/O-melhor-do-nosso-mundo/imagem2.jpg" alt="Imagem imagem">
+
                 <p class="legend">Grande</p>
             </div>
             <div class="image-item" id="image3">
-                <img src="imagens/imagem3.jpg" alt="Imagem 3">
+                <img src="https://98Caracteres.github.io/O-melhor-do-nosso-mundo/imagem3.jpg" alt="Imagem imagem">
+
                 <p class="legend">Massivo</p>
             </div>
-            <div class="image-item" id="image4">
+            <img src="https://98Caracteres.github.io/O-melhor-do-nosso-mundo/imagem4.jpg" alt="Imagem imagem">
+
                 <img src="imagens/imagem4.jpg" alt="Imagem 4">
                 <p class="legend">Guloso</p>
             </div>
